# software-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  compile_spv.sh  fragment.dis  spv_shader.sh  valgrind.sh  vulkan.supp
.zed/: debug.json
include/: aabb.h  aabb.hpp  bitmap.h  clay_renderer.hpp  component.h  component_storage.h  component_storage.hpp  config.hpp  draw_call.hpp  entity.h  entity_manager.h  image.hpp  image_loader.hpp  math.hpp  photo_manager.hpp  physics_system.h  physics_system.hpp  renderer.hpp  rendering_system.hpp  rigidbody_component.h  rigidbody_component.hpp  sprite.h  sprite_component.h  sprite_component.hpp  sprite_renderer.hpp  sprite_system.h  sprite_system.hpp  staticbody_component.h  staticbody_component.hpp  texture.hpp  transform.h  transform_component.h  transform_component.hpp  variables.h  vec2.h  vec2i.h
include/ui/: theme.hpp
include/ui/components/: bottom_bar.hpp  button.hpp  photo_grid.hpp  photo_item.hpp  placeholder.hpp  tally.hpp
include/ui/types/: photo.hpp
include/ui_components/: bottom_bar.hpp  button.hpp  photo_grid.hpp  photo_item.hpp  placeholder.hpp  tally.hpp
res/: test.toml
src/: bitmap.cpp  clay_renderer.cpp  clay_renderer_raylib.c  image_loader.cpp  main.cpp  photo_manager.cpp  physics_system.cpp  renderer.cpp  rendering_system.cpp  sprite.cpp  sprite_renderer.cpp  sprite_system.cpp  transform.cpp  vec2.cpp  vec2i.cpp
src/shaders/: arc.frag  arc.frag.spv  basic.frag  basic.frag.spv  basic.vert  basic.vert.spv  color_rect.frag  color_rect.frag.spv  fragment.glsl  fragment.spv  rect.frag  rect.frag.spv  rounded_corner_border.frag  rounded_corner_border.frag.spv  sprite.frag  sprite.frag.spv  text.frag  text.frag.spv  text.vert  text.vert.spv  texture_rect.frag  texture_rect.frag.spv  ui_rect.frag  ui_rect.frag.spv  vertex.glsl  vertex.spv
